# infsdebridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  paper_plan.md  pyproject.toml  requirements.txt  requirements_pip.txt
data/Papilonidae_dataset/: Papilionidae_aligned.txt  papilionidae_tree.txt
experiments/: Q_bridge_landmarks.ipynb  brownian_bridge_fourier.ipynb  brownian_bridge_landmarks.ipynb  kunita_bridge_fourier.ipynb
notebooks/: Q_bridge_landmarks.ipynb  Uncond_QFourier.ipynb  brownian_bridge_fft.ipynb  brownian_bridge_fourier.ipynb  brownian_bridge_landmarks.ipynb  checks.ipynb  fourier_decomp.ipynb  gaussian_Q_bridge.ipynb  kunita_bridge_fourier.ipynb  kunita_bridge_landmarks.ipynb  plot_figures_from_file.ipynb  species_mean_bridge.ipynb
paper_plots/: plot_figures_from_file.ipynb  read_butterflies.ipynb  species_mean_bridge.ipynb
sdebridge/: data_processing.py  diffusion_bridge.py  example.py  networks.py  plotting.py  runs.py  sde.py  sdes.py  setup.py  solver.py  utils.py
sdebridge/networks/: score_mlp.py  score_unet.py  score_unet_complex.py  time_mlp.py
sdebridge/notebooks/: Cond_QFourier_SM.ipynb  OU_bridge.ipynb  Q_bridge.ipynb  Uncond_QFourier.ipynb  brownian_bridge.ipynb  brownian_bridge_fft.ipynb  checks.ipynb  (+15 more)
tests/: Q_bridge.ipynb  brownian_bridge.ipynb  forward&backward_processes_test.ipynb  score_bridge_test.ipynb  test_diffusion_bridge.py
train_scripts/: bm_exact_fourier.py  bm_exact_fourier_load.py  bm_exact_landmarks.py  bm_exact_landmarks_load.py  brownian_motion_exact.py  brownian_motion_inexact.py  train.py
(+5 files in other folders)
